fix fonts and layout issues on what page

--- a/css/index.css
+++ b/css/index.css
@@ -125,7 +125,6 @@ body {
 .text-2 {
   bottom: 94px;
   z-index: 2;
-  font-family: SourceCodePro-Regular;
   font-size: 0.815em;
   color: rgb(225, 247, 217);
 }
